force-app/main/default/objects/EmployeeTest__c/EmployeeTest__c.object-meta.xml
<CustomObject>
    <label>Employee Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>