force-app/main/default/objects/EmployeeTest__c/fields/AccessCode__c.field-meta.xml
<CustomField>
    <fullName>AccessCode__c</fullName>
    <label>Access Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>