force-app/main/default/objects/EmployeeTest__c/fields/MaximumPoints__c.field-meta.xml
<CustomField>
    <fullName>MaximumPoints__c</fullName>
    <label>Maximum Points</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>