force-app/main/default/objects/EmployeeTest__c/fields/MinimumPoints__c.field-meta.xml
<CustomField>
    <fullName>MinimumPoints__c</fullName>
    <label>Minimum Points</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>