force-app/main/default/objects/EmployeeTest__c/fields/NumberAnswers__c.field-meta.xml
<CustomField>
    <fullName>NumberAnswers__c</fullName>
    <label>Number Answers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>