force-app/main/default/objects/EmployeeTest__c/fields/TestDurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>TestDurationInMinutes__c</fullName>
    <formula>(EndDate__c  -  StartDate__c) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Duration In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>